<resources>
    <string name="app_name">Wygraj dzień</string>
    <string name="edit_text_hint_title">Zadanie</string>
    <string name="btn_text_save">ZAPISZ</string>
    <string name="btn_text_next">DALEJ</string>
    <string name="welcome_exclamation">Witaj!</string>
    <string name="welcome_sentence">Cieszę się, że chcesz osiągać swoje cele.</string>
    <string name="short_description_before_start">Stwórz listę swoich zwycięstw. Zacznij wygrywać dni, tygodnie, lata, życie!</string>
    <string name="text_when_there_is_no_task_yet">Jeszcze nie dodałeś żadnych zadań. Zrób to teraz i działaj.</string>
    <string name="image_content_description">image</string>
    <string name="choose_category">Wybierz kategorię:</string>
    <string name="physical_health">Zdrowie ciało</string>
    <string name="finance">Zabezpieczony portfel</string>
    <string name="mental_health">Potęga umysłu</string>
    <string name="short_description">Short_description</string>
    <string name="Are_you_sure_you_want_exit_the_app">Czy na pewno chcesz wyjść z aplikacji?</string>
    <string name="app_version">1.0</string>
    <string name="settings_in_settings">Ustawienia</string>
    <string name="contact_icon">contact_icon</string>
    <string name="contact_field">Kontakt</string>
    <string name="privacy_policy_field">Polityka prywatności</string>
    <string name="rate_field">Oceń aplikację</string>
    <string name="rate_icon">rate_icon</string>
    <string name="info_about">O aplikacji</string>
    <string name="philosophy">philosophy</string>
    <string name="try_my_Stoik_Cytat_Quiz_App">Sprawdź mój Stoik Cytat Quiz</string>
    <string name="info_about_swiping">infoAboutSwiping</string>
    <string name="author">author</string>
    <string name="quote">quote</string>
    <string name="dateOfTasks">dateOfTasks</string>
</resources>