<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/image_content_description"
        android:src="@drawable/peak_main_icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/welcome_exclamation"
        android:textColor="?android:textColorPrimary"
        android:textSize="@dimen/welcome_page_big_text_size"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/welcome_text_margin"
        android:layout_marginEnd="@dimen/welcome_text_margin"
        android:gravity="center"
        android:paddingStart="@dimen/welcome_text_margin"
        android:paddingEnd="@dimen/welcome_text_margin"
        android:text="@string/welcome_sentence"
        android:textColor="?android:textColorPrimary"
        android:textSize="@dimen/welcome_page_big_text_size"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/short_description_before_start"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/shape_button_rounded"
        android:padding="10dp"
        android:text="@string/btn_text_next"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size" />
</LinearLayout>