<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/CustomToolbarStyle" />

    <LinearLayout
        android:id="@+id/llContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="18dp">

        <ImageView
            android:id="@+id/ivContact"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/contact_icon"
            android:src="@drawable/contact"
            app:tint="@color/icons_in_settings" />

        <TextView
            android:id="@+id/tvContact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity=""
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/contact_field"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPrivacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="18dp">

        <ImageView
            android:id="@+id/ivPrivacyPolicy"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/contact_icon"
            android:src="@drawable/privacy"
            app:tint="@color/icons_in_settings" />

        <TextView
            android:id="@+id/tvPrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity=""
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/privacy_policy_field"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="18dp">

        <ImageView
            android:id="@+id/ivRate"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/rate_icon"
            android:src="@drawable/rate"
            app:tint="@color/icons_in_settings" />

        <TextView
            android:id="@+id/tvRate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity=""
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/rate_field"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="18dp">

        <ImageView
            android:id="@+id/ivAbout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/rate_icon"
            android:src="@drawable/about"
            app:tint="@color/icons_in_settings" />

        <TextView
            android:id="@+id/tvAbout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity=""
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/info_about"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPhilosophy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/ivPhilosophy"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/philosophy"
            android:src="@drawable/philosophy"
            app:tint="@color/icons_in_settings" />

        <TextView
            android:id="@+id/tvPhilosophy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:gravity=""
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/try_my_Stoik_Cytat_Quiz_App"
            android:textColor="?android:textColorPrimary"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:gravity="bottom|center"
        android:text="@string/app_version"
        android:textColor="?android:textColorPrimary"
        android:textSize="18sp" />
</LinearLayout>